--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,11 +245,6 @@ h1 {
   font-family: 'Libre Baskerville', serif;
 }
 
-.highContrast {
-  background-color: #1C1C1C;
-  color: #E8F0FF;
-}
-
 section {
   display: none;
   margin: 50px auto;
@@ -279,6 +274,15 @@ button {
   padding: 10px 20px;
   background-color: #A3DFFE;
   margin: 10px 10px 10px 0px;
+}
+
+.highContrast {
+  background-color: #1C1C1C;
+  color: #E8F0FF;
+}
+
+.dark {
+  background-color: #1C1C1C;
 }
 
 @media (max-width: 1030px) {
